--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         <p>
             <h2>Der beste Kaffee auf 3 Rädern</h2>
         </p>
-        <div class="zeit">
-            Öffnungszeiten: Montag - Freitag : 9 Uhr - 16 Uhr
-        </div>
-        <div class="standort">
-            Standort: Luisenstraße 9 Charité Berlin (Hinterhof)
+        <div class="grid">
+            <div class="beans">
+                <h2></h2>
+            </div>
+            <div class="zeit">
+                <h2>Öffnungszeiten</h2> Montag - Freitag <br> 9 Uhr - 16 Uhr
+            </div>
+            <div class="standort">
+                <h2>Standort</h2> Luisenstraße 9 Berlin-Mitte <br>Charité Berlin (Hinterhof)
+            </div>
         </div>
 
     </header>
