--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 <h2></h2>
             </div>
             <div class="zeit">
-                <h2>Öffnungszeiten</h2> Montag - Freitag <br> 9 Uhr - 16 Uhr
+                <h2>Öffnungszeiten</h2> Montag - Donnerstag
+                <br> 11 Uhr - 16 Uhr
+                <br>Freitag
+                <br> 12 Uhr - 15 Uhr
             </div>
             <div class="standort">
                 <!--
