Site Impressum hinzugefügt

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
                 <h2></h2>
             </div>
             <div class="zeit">
-                <h2>Öffnungszeiten</h2> Montag - Donnerstag
-                <br> 11 Uhr - 16 Uhr
-                <br>Freitag
-                <br> 12 Uhr - 15 Uhr
+                <h2>Öffnungszeiten</h2>
+                <br> Winterpause
+                <br> z.Z. geschlossen
             </div>
             <div class="standort">
                 <!--
@@ -37,10 +36,7 @@
 
     <section id="section-a">
         <p>
-            <h3>Impressum:</h3>
-            <ol>Steffanie Arroyo Carvalho </ol>
-            <ol>Schliemannstraße 19</ol>
-            <ol>10437 Berlin</ol>
+            <a href="impressum.html">Impressum</a>
         </p>
     </section>
 
