--- a/impressum.html
+++ b/impressum.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <p>
-        <h3>Impressum:</h3>
-        <ol>Steffanie Arroyo Carvalho </ol>
-        <ol>Schliemannstraße 19</ol>
-        <ol>10437 Berlin</ol>
-    </p>
-
+    <div class="impress">
+        <p>
+            <h3>Impressum:</h3>
+            <ol>Steffanie Arroyo Carvalho </ol>
+            <ol>Schliemannstraße 19</ol>
+            <ol>10437 Berlin</ol>
+        </p>
+    </div>
 
 </body>
 
