--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </div>
             <div class="zeit">
                 <h2>Öffnungszeiten</h2>
-                <br> Winterpause
-                <br> z.Z. geschlossen
+                <br> ab 14.02.2022
+                <br> 10 - 15 Uhr
             </div>
             <div class="standort">
                 <!--
-                <h2>Standort</h2> Luisenstraße 9 Berlin-Mitte <br>Charité Berlin (Hinterhof) 
+                <h2>Standort</h2> Luisenstraße 9 Berlin-Mitte <br>Charité Berlin (Hinterhof)
                 -->
             </div>
         </div>
